--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 </nav>
 
-	<div id="demo" class="carousel slide" data-ride="carousel">
+	<div id="demo" class="carousel slide col-sm" data-ride="carousel">
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
@@ -98,10 +98,10 @@
  		<hr class="w-25 mx-auto pt-5">
 
  		<div class="row my-5 ">
- 			<div class="col-lg-6 col-md-6 col-12">
+ 			<div class="col-lg-6 col-md-6 col-12 col-sm-6">
  				<img src="card.jpg" class="img-fluid">
  			</div>
- 			<div class="col-lg-6 col-md-6 col-12">
+ 			<div class="col-lg-6 col-md-6 col-12 col-sm-6">
  				<h1>Who Am I .?</h1>
  				<hr>
  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -124,7 +124,7 @@
  		<hr class= " w-25 mx-auto pt-5">
 
  		<div class="row my-5 text-center">
- 			<div class="col-md-4">
+ 			<div class="col-md-4 col-sm-4">
  				<div class="card" style="width:400px">
   				 <img class="card-img-top" src="mumbai-mumbai-150034560749-orijgp.jpg" alt="Card image">
   				 <div class="card-body">
@@ -134,7 +134,7 @@
  			     </div>
 			    </div>
  			</div>
- 			<div class="col-md-4">
+ 			<div class="col-md-4 col-sm-4">
  				<div class="card" style="width:400px">
   				 <img class="card-img-top" src="mumbai-mumbai-150034560749-orijgp.jpg" alt="Card image">
   				 <div class="card-body">
@@ -144,7 +144,7 @@
  			     </div>
 			    </div>
  			</div>
- 			<div class="col-md-4">
+ 			<div class="col-md-4 col-sm-4">
  				<div class="card" style="width:400px">
   				 <img class="card-img-top" src="mumbai-mumbai-150034560749-orijgp.jpg" alt="Card image">
   				 <div class="card-body">
@@ -182,22 +182,22 @@
 
  	<div class="row py-5"> 
 
- 		<div class="col-md-4 mb-4">
+ 		<div class="col-md-4 mb-4 col-sm-4">
  			<img src="india-maharashtra-150032823361o.jpg" class="img-fluid">
  		</div>
- 		<div class="col-md-4 mb-4">
+ 		<div class="col-md-4 mb-4 col-sm-4">
  			<img src="india-maharashtra-150032823361o.jpg" class="img-fluid">
  		</div>
- 		<div class="col-md-4 mb-4">
+ 		<div class="col-md-4 mb-4 col-sm-4">
  			<img src="india-maharashtra-150032823361o.jpg" class="img-fluid">
  		</div>
- 		<div class="col-md-4 mb-4">
+ 		<div class="col-md-4 mb-4 col-sm-4">
  			<img src="india-maharashtra-150032823361o.jpg" class="img-fluid">
  		</div>
- 		<div class="col-md-4 mb-4">
+ 		<div class="col-md-4 mb-4 col-sm-4">
  			<img src="india-maharashtra-150032823361o.jpg" class="img-fluid">
  		</div>
- 		<div class="col-md-4 mb-4">
+ 		<div class="col-md-4 mb-4 col-sm-4">
  			<img src="india-maharashtra-150032823361o.jpg" class="img-fluid">
  		</div>
 
